[gd_scene load_steps=4 format=2]

[ext_resource path="res://instances/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Tittle" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0196078, 0.815686, 0.160784, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PONG"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.171
margin_top = -39.5
margin_right = -64.171
margin_bottom = 39.5
custom_fonts/font = SubResource( 1 )
text = "DE 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -175.471
margin_top = 87.755
margin_right = -132.471
margin_bottom = 160.755
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 139.709
margin_top = 87.755
margin_right = 182.709
margin_bottom = 160.755
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 82.2072
margin_top = -39.5
margin_right = 249.207
margin_bottom = 39.5
custom_fonts/font = SubResource( 1 )
text = "DE 2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Start2" to="." method="_on_Start2_pressed"]
